[package]
name = "solana-nostd-big-mod-exp"
authors = ["Dean Little <@deanmlittle>"]
description = "A more efficient implementation of Big Mod Exp for SVM"
version = "0.1.2"
edition = "2021"
license = "MIT"

[features]
default = []
no-syscall = ["dashu"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
dashu = { version = "0.4.2", optional = true }

[target.'cfg(any(not(target_os = "solana"), feature = "no-syscall"))'.dependencies]
dashu = { version = "0.4.2" }